--- a/latex/sections/05-elastic-block-space.tex
+++ b/latex/sections/05-elastic-block-space.tex
@@ -12,7 +12,7 @@ When a dApp in the Artela network demands high scalability, it can subscribe to 
 
 \begin{figure}[htp]
 \centering
-\includegraphics[width=0.5\textwidth]{sections/images/elastic-block-space.png}
+\includegraphics[width=\columnwidth]{sections/images/elastic-block-space.png}
 \caption{Block Space Type}
 \end{figure}
 
