--- a/latex/references.bib
+++ b/latex/references.bib
@@ -15,69 +15,30 @@
   year={2014}
 }
 
-@mastersthesis{johansson2009designing,
-  title={Designing for Extensibility: An action research study of maximizing extensibility by means of design principles},
-  author={Johansson, Niklas and L{\"o}fgren, Anton},
-  type={{B.S.} thesis},
-  year={2009}
+@article{gelashvili2022blockstm,
+  title = {Block-STM: Scaling Blockchain Execution by Turning Ordering Curse to a Performance Blessing},
+  author = {Rati Gelashvili and Alexander Spiegelman and Zhuolun Xiang and George Danezis and Zekun Li and Dahlia Malkhi and Yu Xia and Runtian Zhou},
+  journal = {arXiv preprint arXiv:2203.06871},
+  year = {2022},
+  url = {https://arxiv.org/abs/2203.06871},
+  note = {Distributed, Parallel, and Cluster Computing (cs.DC); Performance (cs.PF)}
 }
 
-@article{garriga2021blockchain,
-  title={Blockchain and cryptocurrencies: A classification and comparison of architecture drivers},
-  author={Garriga, Martin and Dalla Palma, Stefano and Arias, Maxmiliano and De Renzis, Alan and Pareschi, Remo and Andrew Tamburri, Damian},
-  journal={Concurrency and Computation: Practice and Experience},
-  volume={33},
-  number={8},
-  pages={e5992},
-  year={2021},
-  publisher={Wiley Online Library}
-}
-
-@article{nakamoto2008bitcoin,
-  title={A peer-to-peer electronic cash system},
-  author={Nakamoto, Satoshi and Bitcoin, A},
-  journal={Bitcoin.--URL: https://bitcoin.org/bitcoin.pdf},
-  volume={4},
-  number={2},
-  pages={15},
-  year={2008}
-}
-
-@article{buterin2014next,
-  title={A next-generation smart contract and decentralized application platform},
-  author={Buterin, Vitalik and others},
-  journal={white paper},
-  volume={3},
-  number={37},
-  pages={2--1},
-  year={2014}
-}
-
-@article{blackshear2019move,
-  title={Move: A language with programmable resources},
-  author={Blackshear, Sam and Cheng, Evan and Dill, David L and Gao, Victor and Maurer, Ben and Nowacki, Todd and Pott, Alistair and Qadeer, Shaz and Rain, Dario Russi and Sezer, Stephane and others},
-  journal={Libra Assoc},
-  pages={1},
-  year={2019}
-}
-
-@online{web3foundation2020,
-  title={Substrate: The Blockchain Framework for a Multichain Future},
+@article{heimbach2023dissecting,
+  title={Dissecting the EIP-2930 Optional Access Lists},
+  author={Lioba Heimbach and Quentin Kniep and Yann Vonlanthen and Roger Wattenhofer and Patrick Z{\"u}st},
+  journal={arXiv preprint arXiv:2312.06574},
   year={2023},
-  howpublished={https://substrate.io/}
+  url={https://arxiv.org/abs/2312.06574},
+  note={License: arXiv.org perpetual non-exclusive license}
 }
 
-@online{avalanchewhitepaper,
-  title={Avalanche Platform Whitepaper},
-  author={Kevin Sekniqi, Daniel Laine, Stephen Buttolph, and Emin G¨un Sirer},
-  year={2018},
-  howpublished={https://www.avalabs.org/whitepapers}
-}
-
-@online{webassembly,
-  title={WebAssembly},
-  year={2023},
-  howpublished={https://webassembly.org/}
+@misc{buterin2020eip2930,
+  author = {Vitalik Buterin and Martin Swende},
+  title = {{EIP-2930: Optional Access Lists}},
+  howpublished = {\url{https://eips.ethereum.org/EIPS/eip-2930}},
+  year = {2020},
+  note = {Standards Track: Core, created on 2020-08-29}
 }
 
 @online{ethereum2020evm,
@@ -87,3 +48,37 @@
   howpublished={https://ethereum.github.io/yellowpaper/paper.pdf}
 }
 
+@misc{mysql_innodb_architecture,
+  title = {MySQL InnoDB Architecture},
+  author = {MySQL Tutorial},
+  howpublished = {\url{https://www.mysqltutorial.org/mysql-administration/mysql-innodb-architecture/}},
+  note = {Accessed: 2024-05-29}
+}
+
+@misc{ethereum_patricia_merkle_trie,s
+  title = {Patricia Merkle Trie},
+  author = {Ethereum Foundation},
+  howpublished = {\url{https://ethereum.org/en/developers/docs/data-structures-and-encoding/patricia-merkle-trie/}},
+  note = {Accessed: 2024-05-29}
+}
+
+@misc{fichter_sparse_merkle_tree,
+  title = {What's a Sparse Merkle Tree?},
+  author = {Kelvin Fichter},
+  howpublished = {\url{https://medium.com/@kelvinfichter/whats-a-sparse-merkle-tree-acda70aeb837}},
+  note = {Accessed: 2024-05-29}
+}
+
+@misc{simmon_avl_trees,
+  title = {AVL Trees},
+  author = {Robert J. Simmons},
+  howpublished = {\url{https://www.cs.cmu.edu/~rjsimmon/15122-s15/lec/17-avl.pdf}},
+  note = {Accessed: 2024-05-29}
+}
+
+@misc{cosmos_iavl,
+  title = {IAVL Overview},
+  author = {Cosmos Network},
+  howpublished = {\url{https://github.com/cosmos/iavl/blob/master/docs/overview.md}},
+  note = {Accessed: 2024-05-29}
+}
