--- a/latex/sections/05-elastic-block-space.tex
+++ b/latex/sections/05-elastic-block-space.tex
@@ -2,9 +2,9 @@
 
 This proposal delineates a comprehensive strategy for implementing an \textbf{Elastic Block Space} (EBS) system within the Artela blockchain ecosystem. EBS refers to a dynamically scalable block space that provides independent and protocol-guaranteed block space for dApps with high transaction throughput needs, ensuring predictable performance. By introducing EBS, Artela endeavors to overcome the constraints of fixed block space capacity, enabling seamless scalability while maintaining predictable performance and efficient resource utilization.
 
-Typically, blocks are constrained by a fixed public block space capacity. When a dApp requires more room due to high activity, it can apply for dedicated block space. This additional space is integrated into the block and is exclusively used for the dApp’s transactions. As block space increases, validators must scale "up" by adding elastic execution nodes to handle the enhanced processing load.
+Typically, a monolithic blockchain or an execution layer has only one shared block space available for all dApps, which may lead to the competition between different dApps causing unpredictable gas fee and performance. For dApps with high traffic and a high number of on-chain interactions, competition for block space greatly damages user experience. Opting for app chains or rollups to obtain independent block space introduces significant development burdens and a loss of composability. In Artela, EBS provide a solution to address this dilemma. When a dApps needs more performance predictability, it can apply for  dedicated block space. This additional space is integrated into the block and is exclusively used for the dApp's transactions. As block space increases, validators must scale "up" by adding elastic execution nodes to handle the enhanced processing load.
 
-Elastic block space is a pivotal blockchain scaling mechanism, facilitating limitless scalability while ensuring interoperability. Unlike other scalable networks such as sharded blockchains, appchain networks, and Layer 2 solutions—which provide independent block spaces but suffer from isolation and unsynchronized block generation—elastic block space enables dApps with dedicated block spaces to conduct synchronous interactions through atomic transactions within the same block, circumventing the complexities of asynchronous cross-chain communications.
+Elastic block space is a pivotal blockchain scaling mechanism, facilitating limitless scalability while ensuring interoperability. Unlike other scalable networks such as sharded blockchains, app chain networks, and Layer 2 solutions—which provide independent block spaces but suffer from isolation and unsynchronized block generation—elastic block space enables dApps with dedicated block spaces to conduct synchronous interactions through atomic transactions within the same block, circumventing the complexities of asynchronous cross-chain communications.
 
 When a dApp in the Artela network demands high scalability, it can subscribe to elastic block space to manage the increase in transaction volume. This functionality, combined with native extensions, grants dApps on Artela enhanced scalability and customization potential.
 
@@ -22,13 +22,13 @@ When a dApp in the Artela network demands high scalability, it can subscribe to 
 
 \subsection{Elastic Block Space}
 
-When a dApp within the Artela network requires high scalability, it can opt for elastic block space to manage the increase in transaction volume.
+WWhen a dApp in the Artela network requires high scalability, it can opt for elastic block space to manage the increase in transaction volume.
 
 Elastic Block Space provides dApps with dedicated and protocol-guaranteed block space tailored to their transaction throughput requirements. This mechanism confers several key advantages:
 
 \begin{itemize}
-\item \textbf{Subscription Model:} dApps subscribe to elastic block space via transactions, eliminating the need to manage network infrastructure. This model resembles Software as a Service (SaaS), facilitating developers' access to additional block space.
-\item \textbf{Independent Block Space:} dApps can request additional block space to accommodate high transaction volumes, which is then seamlessly integrated into the block. Validators scale up by adding elastic execution nodes to manage the augmented load. This block space is limited by gas but measured by execution time; the better parallelization the contract can achieve, the larger gas limit this block space will have.
+\item \textbf{Subscription Model:} DApps can sign transactions to dynamically subscribe to the elastic block space services. This implementation allows dapps to utilize chain-level independent block space without any additional development related to blockchain infrastructure.
+\item \textbf{Independent Block Space:} dApps can request additional block space to accommodate high transaction volumes, dedicated for its own usage. Validators scale up by adding elastic execution nodes to manage the augmented load. Independent block space is limited by gas but measured by execution time; the better parallelization the contract can achieve, the larger gas limit this block space will have.
 \item \textbf{Interoperability:} In contrast to sharded blockchains or app chain networks, which often encounter challenges with asynchronous cross-chain communications, elastic block space enables synchronous interactions via atomic transactions within the same block. This ensures seamless integration and native composability for dApps operating within the same blockchain.
 \end{itemize}
 
@@ -39,8 +39,8 @@ Artela's validator nodes are structured as an Elastic Cluster, supporting dynami
 \begin{itemize}
 \item \textbf{Compute Unit (CU):} This serves as a fundamental execution module with a fixed number of CPU cores, capable of parallel computation with predictable transaction processing throughput (TPS). Each CU can manage multiple parallel execution groups.
 \item \textbf{Basic CUs:} These constitute the minimum configuration for an Artela validator node, ensuring a baseline level of TPS for the network.
-\item \textbf{Stepwise Scaling:} The network can dynamically scale by adding or removing CUs based on average load. For instance, if the load exceeds 125\% of the current capacity, a proposal is initiated to increase the number of CUs. Upon approval, the network scales up, thereby reducing the load to 75\%. Conversely, if the load drops below 25\%, a proposal is made to reduce CUs. Scaling decisions are governed by consensus among nodes.
-\item \textbf{Subscription Scaling:} In addition to stepwise scaling, CUs can also be dynamically scaled upon EBS subscription. When a new EBS is subscribed to, a dedicated CU will be assigned for executing the transactions within the given EBS.
+\item \textbf{Stepwise Scaling:} The network can dynamically scale by adding or removing CUs based on average load. For instance, if the load exceeds 125\% of the current capacity, a proposal can be initiated to increase the number of CUs. Once the proposal is approved, the network can scale up and reduce the overhead. Conversely, if the load drops below 25\%, a proposal can also be made to reduce CUs. Scaling decisions are governed by consensus among nodes.
+\item \textbf{Subscription Scaling:} As supplementary to stepwise scaling, CUs can also be dynamically scaled upon EBS subscription. When a new EBS is subscribed to, a dedicated CU will be assigned for executing the transactions within the given EBS.
 \end{itemize}
 
 \subsection{Predictable Performance of EBS}
