🔨: fixed reference typo

--- a/latex/references.bib
+++ b/latex/references.bib
@@ -55,7 +55,7 @@
   note = {Accessed: 2024-05-29}
 }
 
-@misc{ethereum_patricia_merkle_trie,s
+@misc{ethereum_patricia_merkle_trie,
   title = {Patricia Merkle Trie},
   author = {Ethereum Foundation},
   howpublished = {\url{https://ethereum.org/en/developers/docs/data-structures-and-encoding/patricia-merkle-trie/}},
