--- a/latex/litepaper.tex
+++ b/latex/litepaper.tex
@@ -26,7 +26,7 @@
 
 \small
 
-\title{Artela Litepaper: Parallel Execution Stack}
+\title{Artela Whitepaper: Parallel Execution Stack}
 \author{Artela Team}
 \date{\today}
 
