🎉: added some references

--- a/latex/litepaper.tex
+++ b/latex/litepaper.tex
@@ -33,7 +33,7 @@
 \maketitle
 
 \begin{abstract}
-    Artela blockchain enhances scalability through a parallel execution stack, providing applications with predictable performance. This stack consists of a suite of optimization strategies aimed at enabling efficient parallel transaction execution. Initially, it employs a transaction dependency prediction algorithm to group transactions, facilitating their parallel execution across multiple CPU cores. Additionally, it implements a precise preloading mechanism to ensure that transactions perform all I/O operations in-memory cache rather than on the hard drive during execution, while state persistence is carried out asynchronously, thereby contributing to highly efficient read and write operations. Moreover, it optimizes the state storage layer extensively, effectively mitigating performance degradation resulting from data write amplification. Ultimately, the parallel execution and storage characteristics support elastic computing, enabling elastic block space that ensures predictable application performance. These solutions will be integrated into the Artela blockchain, together with Aspect programming, forming a new generation modular execution layer that supports interoperable multi-virtual machines and scaling in both computation and storage. Comprehensive insights are provided in this white paper.
+    Artela blockchain enhances scalability through a parallel execution stack, providing applications with predictable performance. This stack consists of a suite of optimization strategies aimed at enabling efficient parallel transaction execution. Initially, it employs a transaction dependency prediction algorithm to group transactions, facilitating their parallel execution across multiple CPU cores. Additionally, it implements a precise preloading mechanism to ensure that transactions perform all I/O operations in-memory cache rather than on the hard drive during execution, while state persistence is carried out asynchronously, thereby contributing to highly efficient read and write operations. Moreover, it optimizes the state storage layer extensively, effectively mitigating performance degradation resulting from data write amplification. Ultimately, the parallel execution and storage characteristics support elastic computing, enabling elastic block space that ensures predictable application performance. These solutions will be integrated into the Artela blockchain, together with Aspect\cite{artela_aspect_whitepaper} programming, forming a new generation modular execution layer that supports interoperable multi-virtual machines and scaling in both computation and storage. Comprehensive insights are provided in this white paper.
 \end{abstract}
 
 % \newpage
