--- a/latex/references.bib
+++ b/latex/references.bib
@@ -5,6 +5,20 @@
   howpublished={https://www.artela.network/}
 }
 
+@misc{artela_evm_plus_plus,
+  title = {{EVM++}},
+  author = {Artela Network},
+  howpublished = {\url{https://docs.artela.network/main/Artela-Blockchain/EVM++}},
+  note = {Accessed: 2024-05-29}
+}
+
+@misc{artela_aspect_whitepaper,
+  title = {Aspect Whitepaper},
+  author = {Artela Network},
+  howpublished = {\url{https://github.com/artela-network/aspect-whitepaper}},
+  note = {Accessed: 2024-05-29}
+}
+
 @article{wood2014ethereum,
   title={Ethereum: A secure decentralised generalised transaction ledger},
   author={Wood, Gavin and others},
